# learning_drf

./: .env.example  .gitignore  pyproject.toml  setup.cfg
apps/auth/: urls.py  views.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py
apps/cars/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_photo.py  0003_alter_carmodel_photo.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_rename_profile_profilemodel.py  0003_profilemodel_age.py  0004_alter_usermodel_is_active.py
cars/: filters.py  models.py  serializers.py  todo.txt  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_initial.py
configs/: settings.py  urls.py
configs/extra_configs/: rest_config.py
core/: pagination.py
core/enums/: action_token_enum.py  template_enum.py
core/permissions/: custom_permissions.py
core/services/: email_service.py  file_service.py  jwt_service.py
first/: views.py
templates/: activate.html  base.html  recovery_password.html
